评论页面未写完

--- a/HaoChiBao/app/src/main/res/values/strings.xml
+++ b/HaoChiBao/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">好吃宝</string>
+    <string name="comment_content">重庆火锅的材料就只有 盐蒜香菜醋香油 可是他们混在一起我就觉得完美 我以前调的都是什么鬼 晚上是的人还挺多的 地方还算大</string>
 </resources>
