--- a/HaoChiBao/app/src/main/res/values/strings.xml
+++ b/HaoChiBao/app/src/main/res/values/strings.xml
@@ -34,4 +34,11 @@
     <string name="gengduohuoguo">更多火锅</string>
     <string name="quguangguang">去逛逛</string>
     <string name="chenyanjing">陈眼镜火锅</string>
+    <string-array name="nearby">
+        <item>附近</item>
+        <item>500米之内</item>
+        <item>500-1000米</item>
+        <item>1000-1500米</item>
+        <item>1500米以上</item>
+    </string-array>
 </resources>
