添加了评论回复功能的类

--- a/HaoChiBao/app/src/main/res/values/strings.xml
+++ b/HaoChiBao/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="snack">小吃</string>
     <string name="nearby">附近</string>
     <string name="rank">排序</string>
+    <string name="select_the_sorting_method">选择排序方式</string>
     <string name="praise">好评</string>
     <string name="chenyanjinghuoguo">陈眼镜火锅(石油路店)</string>
     <string name="ziranweidaohuogou">自然谓道火锅</string>
