--- a/HaoChiBao/app/src/main/res/values/strings.xml
+++ b/HaoChiBao/app/src/main/res/values/strings.xml
@@ -55,4 +55,6 @@
         <item>1000-1500米</item>
         <item>1500米以上</item>
     </string-array>
+    <!--百度导航-->
+    <string name="title_route_guide_demo">1. GPS导航(RouteGuideDemo)</string>
 </resources>
